Added Profile app

--- a/home/templates/home/membership.html
+++ b/home/templates/home/membership.html
@@ -12,54 +12,62 @@
 
     </div>
     <hr>
-
+    <!--  -->
+    <!--  -->
     <div class="row">
         <div class="col-md-8">
             <div>
                 <p>The <strong>LONDON OMNIBUS TRACTION SOCIETY</strong>
-                </span>brings together those interested in London’s buses, routes and ancillary transport services. We
-                study, record and report on bus operators and operations in and around London, to a radius of about 36 miles
-                from Charing Cross.</p>
-            <p>Members receive our monthly journal THE LONDON BUS, which records route alterations, tendering updates,
-                vehicle allocations, together with a selection of topical photographs.</p>
-            <p>We also publish the quarterly LONDON BUS MAGAZINE. This features modern and historical articles, reviews of
-                London bus events, and recent news in pictures. We regard this as our flagship publication</p>
-            <p>We hold meetings in central London, where members can buy our publications at a discount from our sales stand
-                just as they can at the various rallies we attend or post-free from our Postal Sales department.</p>
-            <p>We look forward to hearing from you. Clicking any of the buttons below will take you to the payment stage
-                where you can pay online or fill in a form and post it to us.</p>
+                    </span>brings together those interested in London’s buses, routes and ancillary transport services.
+                    We
+                    study, record and report on bus operators and operations in and around London, to a radius of about
+                    36 miles
+                    from Charing Cross.</p>
+                <p>Members receive our monthly journal THE LONDON BUS, which records route alterations, tendering
+                    updates,
+                    vehicle allocations, together with a selection of topical photographs.</p>
+                <p>We also publish the quarterly LONDON BUS MAGAZINE. This features modern and historical articles,
+                    reviews of
+                    London bus events, and recent news in pictures. We regard this as our flagship publication</p>
+                <p>We hold meetings in central London, where members can buy our publications at a discount from our
+                    sales stand
+                    just as they can at the various rallies we attend or post-free from our Postal Sales department.</p>
+                <p>We look forward to hearing from you. Clicking any of the buttons below will take you to the payment
+                    stage
+                    where you can pay online or fill in a form and post it to us.</p>
             </div>
             <hr>
-                <div class="stickyside text-center">
-                    <br>
-                    <h5><strong>Annual Membership (TLB + LBM)</strong></h5>
-                    <h6>Includes 12 issues of THE LONDON BUS </h6><h6> plus 4 issues of LONDON BUS MAGAZINE</h6>
-                    <p>
-                        £56.00 UK<br>
-                        £68.00 Europe<br>
-                        £75.00 Rest of World
-                    </p>
-                    <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
-                    <hr>
-                    <h5><strong>Annual Membership (TLB)</strong></h5>
-                    <h6>Includes 12 issues of THE LONDON BUS</h6>
-                    <p>
-                        £36.00 UK<br>
-                        £48.00 Europe<br>
-                        £55.00 Rest of World
-                    </p>
-                    <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
-                    <hr>
-                    <h5><strong>Non-Members (LBM)</strong></h5>
-                    <h6>Annual subscription to LONDON BUS MAGAZINE</h6>
-                    <p>
-                        £29.00 UK<br>
-                        £39.00 Europe<br>
-                        £49.00 Rest of World
-                    </p>
-                    <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
-                </div>
-        
+            <div class="stickyside text-center">
+                <br>
+                <h5><strong>Annual Membership (TLB + LBM)</strong></h5>
+                <h6>Includes 12 issues of THE LONDON BUS </h6>
+                <h6> plus 4 issues of LONDON BUS MAGAZINE</h6>
+                <p>
+                    £56.00 UK<br>
+                    £68.00 Europe<br>
+                    £75.00 Rest of World
+                </p>
+                <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
+                <hr>
+                <h5><strong>Annual Membership (TLB)</strong></h5>
+                <h6>Includes 12 issues of THE LONDON BUS</h6>
+                <p>
+                    £36.00 UK<br>
+                    £48.00 Europe<br>
+                    £55.00 Rest of World
+                </p>
+                <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
+                <hr>
+                <h5><strong>Non-Members (LBM)</strong></h5>
+                <h6>Annual subscription to LONDON BUS MAGAZINE</h6>
+                <p>
+                    £29.00 UK<br>
+                    £39.00 Europe<br>
+                    £49.00 Rest of World
+                </p>
+                <a href="{% url 'membership' %}" class="btn btn-danger">Become a Member</a>
+            </div>
+
         </div>
         <div class="col-md-4">
             <br>
@@ -67,15 +75,10 @@
         </div>
     </div>
     <div class="row">
-
-        
     </div>
-
-
-
     <div class="">
         <p></p>
-        
+
     </div>
 </div>
 {% endblock %}
