--- a/post-app-wrong/templates/post/news_page.html
+++ b/post-app-wrong/templates/post/news_page.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+{% endblock %}
+
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
         <div class=" col-md-8 col-md-10 mx-auto">
             <div class="site-heading">
-                <h1 class=" site-heading my-4 mt-3 text-black"> Welcome to my awesome News Blog </h1>
+                <h1 class=" site-heading my-4 mt-3 text-black"> Welcome to my News page
+                     </h1>
                 <p class="text-light">We Love Django As much as you do..! &nbsp
                 </p>
             </div>
