--- a/templates/includes/mob-nav.html
+++ b/templates/includes/mob-nav.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" aria-current="page" href="{% url 'publications' %}">Publications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'sales' %}">Sales</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'products' %}">Sales</a>
                     </li>
                     
                     <li class="nav-item">
