--- a/templates/base.html
+++ b/templates/base.html
@@ -102,19 +102,19 @@
                             aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-auto py-auto">My Account</p>
+                                <a href="{% url 'profile' %}" class="dropdown-item"><p class="my-auto py-auto">My Account</p></a>
                             </div>
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenicated %}
-                            {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item">Shop Management</a>
-                            {% endif %}
-                            <a href="" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Shop Management</a>
+                                {% endif %}
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else%}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
                     </li>
@@ -199,6 +199,7 @@
         });
     </script>
     {% endblock %}
+    <div class="mb-5"></div>
     <footer>
         <nav class="text-light text-center">
             <a class="text-light" href="index.html">Home |</a>
