--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -28,7 +28,30 @@
                 Publications
             </a>
         </li>
+        <!--  -->
+        <!-- <li class="nav-item dropdown-menu">
+            <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <div class="text-center">
+                    <div><i class="fas fa-user fa-lg"></i></div>
+                    <p class="my-0">My Account</p>
+                </div>
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                <a href="#" class="dropdown-item">Product Management</a>
+                {% endif %}
+                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                {% endif %}
+            </div>
+        </li> -->
 
+        <!--  -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'products' %}"
                 id="sales-link">
@@ -37,7 +60,8 @@
         </li>
         <!--  -->
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle logo-font font-weight-bold text-center text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle logo-font font-weight-bold text-center text-light" href="#" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
                 About LOTS
             </a>
             <ul class="dropdown-menu">
@@ -47,9 +71,9 @@
                 <li><a href="" class="dropdown-item">Contact Us</a></li>
             </ul>
         </li>
-
+       
         <!--  -->
 
-       
+
     </ul>
 </div>
