Profile Update information completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,8 @@
                     </div>
                 </form>
             </div> -->
+
+            <!--  -->
             <div class="col-8 col-sm-6 my-auto py-2 mx-0">
                 <ul class="list-inline list-unstyled text-end text-lg-right my-0 mx-0">
                     <li class="list-inline-item dropdown align-middle">
@@ -106,13 +108,13 @@
                             </div>
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenicated %}
+                            {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Shop Management</a>
+                                    <a href="" class="dropdown-item">Product Management</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else%}
+                            {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
