--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <!-- <div class="container header-container">
         <div class="row">
             <div class="col"></div>
         </div>
-    </div>
+    </div> -->
 {% endblock %}
 
 {% block content %}
@@ -14,10 +14,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
+                <h1 class="mt-3">Product Management</h1>
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
                 <h5 class="text-muted">Edit a Product</h5>
-                <hr>
             </div>
         </div>
 
