--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,9 +11,9 @@
                             <img id="prodDetImg" class="card-img-top img-fluid " src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
-                        <!-- <a href="">
+                        <a href="">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                        </a> -->
+                        </a>
                     {% endif %}
                 </div>
             </div>
