--- a/home/templates/home/membership.html
+++ b/home/templates/home/membership.html
@@ -71,7 +71,7 @@
         </div>
         <div class="col-md-4">
             <br>
-            <img class="pubimg" src="/media/publications/Bus_Collection.png" alt="">
+            <img class="pubimg" src="{MEDIA_URL}/media/publications/Bus_Collection.png" alt="">
         </div>
     </div>
     <div class="row">
