Media links edit

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,9 +8,9 @@
 {% block content %}
 <div class="busbackground sliderind">
     <ul>
-        <li><img src="/media/buses/6.jpg" alt="Image 1"></li>
-        <li><img src="/media/buses/7.jpg" alt="Image 2"></li>
-        <li><img src="/media/buses/8.jpg" alt="Image 3"></li>
+        <li><img src="{{MEDIA_URL}}buses/6.jpg" alt="Image 1"></li>
+        <li><img src="{{MEDIA_URL}}buses/7.jpg" alt="Image 2"></li>
+        <li><img src="{{MEDIA_URL}}buses/8.jpg" alt="Image 3"></li>
     </ul>
     <div class="container h-100">
         <div class="row h-100">
