Media Files changed formatted links

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,8 +73,8 @@
         <div class="row tophead">
             <div class="col-4 col-sm-6 my-auto py-3 text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img class="d-none d-sm-block" src="/media/logo-red.png" height="75px" alt="">
-                    <img class="d-block d-sm-none" src="/media/logo-sm.png" height="75px" alt="">
+                    <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.png" height="75px" alt="">
+                    <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.png" height="75px" alt="">
                     <h2 class="logo-font text-black my-0">
                         <!-- <strong>London Omnibus Traction Society</strong> -->
                     </h2>
