--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -17,7 +17,7 @@
     </div>
     <hr>
     <div class="">    
-        <img src="/media/buses/17.jpg" class="aboutimg img-fluid"></img>
+        <img src="{{MEDIA_URL}}buses/17.jpg" class="aboutimg img-fluid"></img>
         <p><br>
                 The London Omnibus Traction Society was founded in 1964, and now has one of the largest memberships
                 of
