--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -54,7 +54,7 @@
 <!-- Membership cards -->
 <div class="container-fluid">
     <div class="row ">
-        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border rounded-4 memcard mx-auto">
+        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border border-5 border-white rounded-4 memcard mx-auto">
             <h5><strong>Annual Membership (TLB + LBM)</strong></h5>
             <h6>Includes 12 issues of THE LONDON BUS plus 4 issues of LONDON BUS MAGAZINE</h6>
             <p>
@@ -64,9 +64,9 @@
             </p>
             <br>
             <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
+                class="btn btn-danger position-absolute top-100 start-50 border-0 translate-middle memberbtn">Become a Member</a>
         </div>
-        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border rounded-4 memcard mx-auto">
+        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border border-5 border-white rounded-4 memcard mx-auto">
             <h5><strong>Annual Membership (TLB)</strong></h5>
             <h6>Includes 12 issues of THE LONDON BUS</h6>
             <p>
@@ -76,10 +76,10 @@
             </p>
             <br>
             <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn" memberbtn>Become a
+                class="btn btn-danger position-absolute top-100 start-50 border-0 translate-middle memberbtn" memberbtn>Become a
                 Member</a>
         </div>
-        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border rounded-4 memcard mx-auto">
+        <div class="col-12 col-lg-3 col-sm-5 pt-3 position-relative m-2 mb-5 border border-5 border-white rounded-4 memcard mx-auto">
             <h5><strong>Non-Members (LBM)</strong></h5>
             <h6>Annual subscription to LONDON BUS MAGAZINE</h6>
             <p>
@@ -89,7 +89,7 @@
             </p>
             <br>
             <a href="{% url 'membership' %}"
-                class="btn btn-danger position-absolute top-100 start-50 translate-middle memberbtn">Become a Member</a>
+                class="btn btn-danger position-absolute top-100 start-50 border-0 translate-middle memberbtn">Become a Member</a>
         </div>
 
 
