--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,21 +2,22 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}{% trans "Log Out" %}{% endblock %}
 
 {% block inner_content %}
 
-<h1 class="mt-3">{% trans "Sign Out" %}</h1>
+<h1 class="col mt-3">{% trans "Log Out" %}</h1>
 <hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+
+<p>{% trans 'Are you sure you want to Log out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn btn-outline-black rounded-0 mt-3" href="{% url 'home' %}">Cancel</a>
+  <button type="submit" class="btn btn-black rounded-0 text-uppercase mt-3">{% trans 'Log Out' %}</button>
 </form>
 
 
