--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -5,8 +5,7 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+<h1 class="mt-3">{% trans "Verify Your E-mail Address" %}</h1>
 <hr>
 
 {% url 'account_email' as email_url %}
