--- a/templates/base.html
+++ b/templates/base.html
@@ -24,15 +24,9 @@
     {% endblock %}
 
     {% block corejs %}
-    <!-- <script src="https://kit.fontawesome.com/" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/9f41e2550b.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script> -->
-    <script
-  src="https://code.jquery.com/jquery-3.6.3.js"
-  integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.js"
+        integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
@@ -41,29 +35,10 @@
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
-    <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap-grid.min.css" 
-    integrity="sha512-JQksK36WdRekVrvdxNyV3B0Q1huqbTkIQNbz1dlcFVgNynEMRl0F8OSqOGdVppLUDIvsOejhr/W5L3G/b3J+8w==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-    <!-- Specific LOTS CSS -->
-    <!-- <link rel="stylesheet" href="{% static 'css/base.css' %}"> -->
-
-
-    <!-- Font Awesome -->
-    <!-- Bootstrap -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" 
-    integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- Specific LOTS JS -->
-    <!-- <script type="text/javascript" src="js/dist/app.min.js"></script> -->
 
     {% block extra_js %}
     {% endblock %}
 
-    <!-- <link href="favicon.ico" type="image/x-icon" rel="icon" />
-    <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" /> -->
     <title>London Omnibus Traction Society {% block extra_title %}{% endblock %}</title>
 
 </head>
@@ -75,27 +50,8 @@
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                     <img class="d-none d-sm-block" src="{{MEDIA_URL}}logo-red.webp" height="75px" alt="">
                     <img class="d-block d-sm-none" src="{{MEDIA_URL}}logo-sm.webp" height="75px" alt="">
-                    <h2 class="logo-font text-black my-0">
-                        <!-- <strong>London Omnibus Traction Society</strong> -->
-                    </h2>
                 </a>
             </div>
-            <!-- <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="">
-                    <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q"
-                            placeholder="Search our site">
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div> -->
-
             <!--  -->
             <div class="col-8 col-sm-6 my-auto py-2 mx-0">
                 <ul class="list-inline list-unstyled text-end text-lg-right my-0 mx-0">
@@ -108,14 +64,14 @@
                         </a>
                         <div id="droppydown" class="dropdown-menu border-0">
                             {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
-                                {% endif %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
                     </li>
@@ -135,13 +91,8 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <!-- <nav class="navbar navbar-expand-lg navbar-light  d-block d-lg-none">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-                                aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button> -->
+
                         {% include 'includes/mob-nav.html' %}
-                        <!-- </nav> -->
                     </li>
                 </ul>
             </div>
@@ -187,7 +138,6 @@
             console.log(document.getElementById('liveToast'))
             if (document.getElementById('liveToast')) {
                 document.getElementById("liveToast").style.display = "inherit";
-                // setTimeout({document.getElementById("liveToast").style.display = "initial"}, 500)   
 
                 setTimeout(closetoast, 3000);
 
@@ -223,12 +173,12 @@
             </p>
         </div>
     </footer>
-<script>
-    function droppydown() {
-        var droppydown = document.getElementById('droppydown')
-        droppydown.classList.toggle('show')
-    }
-</script>
+    <script>
+        function droppydown() {
+            var droppydown = document.getElementById('droppydown')
+            droppydown.classList.toggle('show')
+        }
+    </script>
 </body>
 
 </html>
