--- a/templates/includes/mob-nav.html
+++ b/templates/includes/mob-nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar d-block d-lg-none" style="">
+<nav class="navbar d-block d-lg-none">
     <div class="container-fluid px-0 mx-0">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -8,31 +8,22 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasNavbarLabel">LOTS</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button></div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
-                    </li>
+                        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'membership' %}">How to Join</a>
-                    </li>
+                        <a class="nav-link" aria-current="page" href="{% url 'membership' %}">How to Join</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'news' %}">News</a>
-                    </li>
+                        <a class="nav-link" aria-current="page" href="{% url 'news' %}">News</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'publications' %}">Publications</a>
-                    </li>
+                        <a class="nav-link" aria-current="page" href="{% url 'publications' %}">Publications</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'products' %}">Sales</a>
-                    </li>
-                    
+                        <a class="nav-link" aria-current="page" href="{% url 'products' %}">Sales</a></li>
                     <li class="nav-item">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        About LOTS
-                    </a>
+                        About LOTS</a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'about_us' %}" class="dropdown-item">About Us</a></li>
                             <li><a href="" class="dropdown-item">Information Service</a></li>
