Updated links to subscription services

--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,8 +7,8 @@
 
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
+
+<h1 class="logo-font mt-3">{% trans "Confirm E-mail Address" %}</h1>
 <hr>
 
 {% if confirmation %}
