--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,8 @@
                         <div id="droppydown" class="dropdown-menu border-0">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
+                            <a href="{% url 'admin' %}" class="dropdown-item">Admin</a>
+                            <a href="{% url 'add_post' %}" class="dropdown-item">Add Post</a>
                             <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
                             {% endif %}
                             <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
