Contact form update

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -26,7 +26,7 @@
                         </a>
                         {% else %}
                         <a id="NoImgSales" href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.webp"
                                 alt="{{ product.name }}">
                         </a>
                         {% endif %}
