Contact form completed again

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -28,7 +28,7 @@
             <ul class="dropdown-menu">
                 <li><a href="{% url 'about_us' %}" class="dropdown-item">About Us</a></li>
                 <li><a href="{% url 'links' %}" class="dropdown-item">Links</a></li>
-                <li><a href="{% url 'contact_us' %}" class="dropdown-item">Contact Us</a></li>
+                <li><a href="{% url 'contact' %}" class="dropdown-item">Contact Us</a></li>
             </ul>
         </li>
     </ul>
