--- a/templates/includes/mob-nav.html
+++ b/templates/includes/mob-nav.html
@@ -27,7 +27,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'about_us' %}" class="dropdown-item text-center">About Us</a></li>
                             <li><a href="{% url 'links' %}" class="dropdown-item text-center">Links</a></li>
-                            <li><a href="" class="dropdown-item text-center">Contact Us</a></li>
+                            <li><a href="{% url 'contact' %}" class="dropdown-item text-center">Contact Us</a></li>
                         </ul>
                     </li>
                 </ul>
