--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -18,6 +18,10 @@
     </div>
     <hr>
 </div>
+{% if from_name %}
+<div><h2>Thanks {{ from_name }} your message has been sent.</h2></div>
+{% endif %}
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-10">
