--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -28,7 +28,7 @@
             <div class="row justify-content-center">
                 
                 <div class="col-md-6">
-                    <form id="form" class="form" action="{% url 'contact' %}">
+                    <form id="form" class="form" action="{% url 'contact' %}" method="POST">
                         {% csrf_token %}
                         <div class="container-fluid">
                             <div class="row justify-content-center">
