--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,16 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-{% endblock %}
-
-{% block extra_css %}
-<!-- <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script>
-    emailjs.init('uQkH-Hh5dEU1iUQ29')
-</script> -->
-{% endblock %}
-
 {% block content %}
 <div class="container">
     <div class="row">
@@ -27,30 +17,29 @@
         <div class="col-md-10">
             <div class="row justify-content-center">
                 
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <form id="form" class="form" action="{% url 'contact' %}" method="POST">
                         {% csrf_token %}
                         <div class="container-fluid">
-                            <div class="row justify-content-center">
+                            <div class="row w-100">
 
                                 <div class="input-group mb-1">
-                                    <label class="input-group-text basic-addon1" for="from_name">Name</label>
+                                    <label class="input-group-text basic-addon1 w-25 contactform" for="from_name">Name:</label>
                                     <input class="form-control" placeholder="Name" type="text" name="from_name"
                                         id="from_name" required>
                                 </div>
                                 <div class="input-group mb-1">
-                                    <label class="input-group-text basic-addon1" for="contact_number">Phone
-                                        Number</label>
+                                    <label class="input-group-text basic-addon1 w-25" for="contact_number">Phone:</label>
                                     <input type="text" class="form-control" placeholder="Phone Number"
                                         name="contact_number" id="contact_number">
                                 </div>
                                 <div class="input-group mb-1">
-                                    <label class="input-group-text basic-addon1" for="reply_to">Email Address</label>
+                                    <label class="input-group-text basic-addon1 w-25" for="reply_to">Email:</label>
                                     <input type="email" name="reply_to" id="reply_to" class="form-control"
                                         placeholder="Email Address" required>
                                 </div>
                                 <div class="input-group mb-3">
-                                    <label for="message_received" class="input-group-text basic-addon1">Message:</label>
+                                    <label for="message_received" class="input-group-text basic-addon1 w-25">Message:</label>
                                     <textarea class="form-control" placeholder="Ask me anything" name="message_received"
                                         id="message_received" required></textarea>
                                 </div>
@@ -63,41 +52,15 @@
                         </div>
                     </form>
 
-                    <!--  -->
-                    <!-- <form class="mb-5" method="post" id="contactForm" name="contactForm" novalidate="novalidate">
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <input type="text" class="form-control m-2 " name="name" id="name"
-                                    placeholder="Your name">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <input type="text" class="form-control m-2" name="email" id="email" placeholder="Email">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12 form-group">
-                                <textarea class="form-control m-2" name="message" id="message" cols="30" rows="6"
-                                    placeholder="Write your message"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <input class="send-button btn btn-primary btn-large blue darken-4 center " type="submit" id="buttonsm"
-                  value="Send Email" onclick="SendMail()">
-                            </div>
-                        </div>
-                    </form> -->
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <p><img src="{{ MEDIA_URL }}bus-contact.webp" alt="Image" class="img-fluid"></p>
                 </div>
             </div>
         </div>
         <hr>
 
-        <h2>Information Service</h2>
+        <h2 class="text-danger">Information Service</h2>
         <p>LOTS' Information Service (available only to members).</p>
         <p>LOTS members may contact Andrew Robertson:</p>
 
@@ -108,11 +71,4 @@
     </div>
 </div>
 
-{% endblock %}
-
-
-{% block postloadjs %}
-<!-- <link rel="stylesheet" href="{% static 'js/email.min.js' %}"> -->
-<!-- <link rel="stylesheet" href="{% static 'js/script.js' %}"> -->
-<!-- <link rel="stylesheet" href="{% static 'js/email.js' %}"> -->
 {% endblock %}
