Readme updated with schema and layouts

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse bg-dark text-light" id="main-nav">
+<div class="collapse navbar-collapse bg-dark bg-gradient text-light" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'home' %}"
