--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,9 @@
 html {
     height: 100%;
 }
+body {
+  font-family:Arial, Helvetica, sans-serif;
+}
 
 .busbackground {
     background: url('/media/7.webp') no-repeat center center fixed;
