--- a/home/templates/home/membership.html
+++ b/home/templates/home/membership.html
@@ -37,62 +37,80 @@
             </div>
             <hr>
             <div class="text-center">
-                <h5 ><strong>Annual Membership (TLB + LBM)</strong></h5>
-                <h6 >Includes 12 issues of THE LONDON BUS </h6>
-                <h6 > plus 4 issues of LONDON BUS MAGAZINE</h6>
-                <div >
+                <h5><strong>Annual Membership (TLB + LBM)</strong></h5>
+                <h6>Includes 12 issues of THE LONDON BUS </h6>
+                <h6> plus 4 issues of LONDON BUS MAGAZINE</h6>
+                <div>
                     <table class="mx-auto">
                         <tr>
                             <td class="text-start">£56.00 UK</td>
-                            <td><a href="{% url 'tluk' %}" class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>TLB + LBM UK</strong></a></td>
+                            <td><a href="{% url 'tluk' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>TLB
+                                        + LBM UK</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£68.00 Europe</td>
-                            <td><a href="{% url 'tleu' %}" class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>TLB + LBM EU</strong></a></td>
+                            <td><a href="{% url 'tleu' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>TLB
+                                        + LBM EU</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£75.00 Rest of World</td>
-                            <td><a href="{% url 'tlworld' %}" class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB +LBM World</strong></a></td>
+                            <td><a href="{% url 'tlworld' %}"
+                                    class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB +LBM
+                                        World</strong></a></td>
                         </tr>
                     </table>
                 </div>
                 <hr>
                 <h5><strong>Annual Membership (TLB)</strong></h5>
                 <h6>Includes 12 issues of THE LONDON BUS</h6>
-                <div >
+                <div>
                     <table class="mx-auto">
                         <tr>
                             <td class="text-start">£36.00 UK</td>
-                            <td><a href="{% url 'tuk' %}" class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>TLB UK</strong></a></td>
+                            <td><a href="{% url 'tuk' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>TLB
+                                        UK</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£48.00 Europe</td>
-                            <td><a href="{% url 'teu' %}" class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>TLB EU</strong></a></td>
+                            <td><a href="{% url 'teu' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>TLB
+                                        EU</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£55.00 Rest of World</td>
-                            <td><a href="{% url 'tworld' %}" class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB World</strong></a></td>
+                            <td><a href="{% url 'tworld' %}"
+                                    class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>TLB
+                                        World</strong></a></td>
                         </tr>
                     </table>
                 </div>
-                
+
                 <hr>
                 <h5><strong>Non-Members (LBM)</strong></h5>
                 <h6>Annual subscription to LONDON BUS MAGAZINE</h6>
-                
-                <div >
+
+                <div>
                     <table class="mx-auto">
                         <tr>
                             <td class="text-start">£29.00 UK</td>
-                            <td><a href="{% url 'luk' %}" class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>LBM UK</strong></a></td>
+                            <td><a href="{% url 'luk' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-50 p-2 m-2 shadow text-white border border-danger"><strong>LBM
+                                        UK</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£39.00 Europe</td>
-                            <td><a href="{% url 'leu' %}" class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>LBM EU</strong></a></td>
+                            <td><a href="{% url 'leu' %}"
+                                    class="btn bg-danger bg-gradient bg-opacity-75 p-2 m-2 shadow text-white border border-danger"><strong>LBM
+                                        EU</strong></a></td>
                         </tr>
                         <tr>
                             <td class="text-start">£49.00 Rest of World</td>
-                            <td><a href="{% url 'lworld' %}" class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>LBM World</strong></a></td>
+                            <td><a href="{% url 'lworld' %}"
+                                    class="btn bg-danger bg-gradient p-2 m-2 shadow text-white"><strong>LBM
+                                        World</strong></a></td>
                         </tr>
                     </table>
                 </div>
