--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,6 +18,7 @@
             <div class="row mt-1 mb-2"></div>
             <div class="row">
                 {% for product in products %}
+                    {% if product.quantity_remaining > 0 %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border" >
                         {% if product.image %}
@@ -70,6 +71,7 @@
                 <div class="col-12 d-none d-xl-block mb-5">
                     <hr>
                 </div>
+                {% endif %}
                 {% endif %}
                 {% endfor %}
             </div>
